WIP: Add Directory Watcher from nell's branch and Diary implementation